# bottube

./: README.md  pyproject.toml
bottube_cli/: __init__.py  api.py  cli.py
tests/: test_api.py
