[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bottube-cli"
version = "0.1.0"
description = "BoTTube CLI - Upload, Browse, Manage from Terminal"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
]

[project.scripts]
bottube = "bottube_cli.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "responses>=0.18.0",
]
